src/test/ui/proc-macro/macro-brackets.stderr
error[E0308]: mismatched types
  --> $DIR/macro-brackets.rs:11:21
   |
LL | id![static X: u32 = 'a';];
   |                     ^^^ expected u32, found char

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
